fix: linkedin link

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -95,7 +95,7 @@
         </svg>
       </a>
       <a
-        href="www.linkedin.com/in/monique-simberg"
+        href="https://www.linkedin.com/in/monique-simberg"
         aria-label="LinkedIn"
         target="_blank"
         rel="noopener"
