--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,8 +1,10 @@
-:host { display: block; }
+:host {
+  width: 100%;
+}
 
 .container {
   width: min(720px, 92vw); 
-  margin-inline: auto;      
+  margin-inline: auto;
 }
 
 h2 {
