--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -18,6 +18,7 @@
   background: #ffffffcc;
   backdrop-filter: blur(8px);
   border-bottom: 1px solid var(--border-color);
+  width: 100%;
 }
 .site-header nav {
   display: flex;
