--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,7 @@
-<<<<<<< HEAD
-/* You can add global styles to this file, and also import other style files */
-:root{
-    --header-h: 64px;
-}
-=======
 @use '@angular/material' as mat;
 
 :root {
+  // color pallette
     --color: #0f172a; /* slate-900 */
     --footer-color: #475569; /* slate-600 */
     --link-color: #2563eb; /* blue-600 */
@@ -17,6 +12,8 @@
     --card-bg: #ffffff; /* white */
     --shadow: 0 1px 2px rgba(0,0,0,.06);
     --shadow-hover: 0 4px 6px rgba(0,0,0,0,.1), 0 1px 3px rgba(0,0,0,.06);
+  // dimensionings
+    --header-h: 64px;
 }
 
 html, body { height: 100%; }
@@ -26,4 +23,3 @@ body {
   color: #0f172a; /* slate-900 */
 }
 
->>>>>>> aeff533811d5350f8acf8b924b3180e11eb4986f
