--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -8,15 +8,13 @@
 }
 
 h2 {
-  margin: 0 1rem 1rem;
   font-weight: 600;
   text-align: left;
 }
 
-.contact-form {
+form {
   display: grid;
-  gap: 12px;
-  width: 100%;              
+  gap: 16px;
 }
 
 .two-col {
