chore: add wip card to contacts page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -61,7 +61,7 @@
       alt="Monique Simberg Logo">
     <h1>Monique Simberg</h1>
     <ul class="nav">
-      <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Projects</a></li>
+      <li><a routerLink="/projects" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Projects</a></li>
       <li><a routerLink="/about" routerLinkActive="active">About</a></li>
       <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
     </ul>
