fix: header on web, feat: blog posts

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -63,6 +63,7 @@
     <ul class="nav">
       <li><a routerLink="/projects" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Projects</a></li>
       <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+      <li><a routerLink="/blog" routerLinkActive="active">Blog</a></li>
       <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
     </ul>
   </nav>
