--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -5,7 +5,7 @@
 /* Layout helpers */
 .header-container {
   width: 100%;
-  max-width: 2000px;
+  max-width: var(--max-w);
   margin-inline: auto;
   padding-inline: 1rem;
 }
